[tool.poetry]
name = "servus"
version = "0.1.0"
description = ""
authors = ["Auke Oosterhoff <auke@orangetux.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
wasmer-compiler-cranelift = "^1.0.0"
wasmer = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
